Cursor visibility fix

--- a/src/css/demo1.css
+++ b/src/css/demo1.css
@@ -212,6 +212,7 @@ a:focus {
 		left: 0;
 		display: block;
 		pointer-events: none;
+		opacity: 0;
 	}
 	.cursor__inner {
 		fill: var(--cursor-fill);
